--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <h1>Cloud Cafe</h1>
 
-        <div class="content">
+  <div class="content">
 
-            <form id="add-cafe-form"></form>
+    <form id="add-cafe-form"></form>
 
-            <ul id="cafe-list"></ul>
+    <ul id="cafe-list"></ul>
 
-        </div>
+  </div>
 
-        <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
